--- a/client/src/style.css
+++ b/client/src/style.css
@@ -16,12 +16,10 @@
 }
 
 .gutter.gutter-horizontal {
-  /* background-image: url('grips/vertical.png'); */
   cursor: col-resize;
 }
 
 .gutter.gutter-vertical {
-  /* background-image: url('grips/horizontal.png'); */
   cursor: row-resize;
 }
 
@@ -36,26 +34,73 @@
   align-items: center;
 }
 
-#btn div {
-  width: 100%;
+#one,
+#two,
+#three {
+  display: grid;
+  grid-template-rows: 1fr 2fr;
+  justify-content: stretch;
+  text-align: center;
 }
 
-#btn input {
-  margin: 5px 0 5px 0;
+#form {
+  width: 100%;
+  height: 100%;
+}
+
+#form > div {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+}
+
+#form > div div {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#form > div div label {
+  padding-right: 10px;
+}
+
+#form > div div button,
+#form > div div input {
   display: inline-block;
-  width: 100%;
-  height: 30px;
+  width: 30%;
+  max-width: 100px;
+  height: 25px;
 }
 
-#btn button {
-  margin: 5px 0 5px 0;
-  display: inline-block;
-  width: 100%;
-  height: 30px;
+#form > div div button:hover {
+  cursor: pointer;
 }
-
-
 
 #data {
-  margin-top: 10px;
+  width: 100%;
+  height: 100%;
+  padding: 10px;
+}
+
+#data table {
+  border: 1px solid black;
+  width: 100%;
+  border-collapse: collapse;
+  margin: 0 auto;
+}
+
+#data table button {
+  display: inline-block;
+  width: 50px;
+  max-width: 30%;
+  height: 25px;
+  cursor: pointer;
+}
+
+th,
+td {
+  border: 1px solid black;
+  height: 30px;
+  text-align: center;
 }
