--- a/client/src/style.css
+++ b/client/src/style.css
@@ -27,6 +27,57 @@
   display: flex;
 }
 
+#count {
+  position: absolute;
+  top: 30px;
+  right: 50px;
+  font-size: 30px;
+}
+
+.editForm {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+}
+
+#editForm {
+  width: 400px;
+  height: 400px;
+  margin: 100px auto;
+  background-color: #eee;
+  position: relative;
+}
+
+#editForm > div {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  height: 100%;
+}
+
+#editForm > div div {
+  padding: 20px 0;
+}
+#editForm > div div button,
+#editForm > div div input {
+  display: inline-block;
+  width: 100px;
+  height: 25px;
+  cursor: pointer;
+}
+
+#cancel {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  width: 50px;
+  height: 30px;
+  cursor: pointer;
+}
+
 .box {
   display: flex;
   flex-direction: column;
