--- a/client/src/style.css
+++ b/client/src/style.css
@@ -43,8 +43,8 @@
 }
 
 #editForm {
-  width: 400px;
-  height: 400px;
+  width: 500px;
+  height: 500px;
   margin: 100px auto;
   background-color: #eee;
   position: relative;
@@ -97,6 +97,7 @@
 #form {
   width: 100%;
   height: 100%;
+  padding-top: 20px;
 }
 
 #form > div {
